tests/NormalTests/paczka1/fuzzy1/91763759.err
Error in line 2: Q1FHTO6nNS S244 21,6
Error in line 6: Q1FHTO6nNS S384 70,8
Error in line 7: Q1FHTO6nNS A233 9,0
Error in line 10: A233 S244 8,0
Error in line 14: A233 S828 96,4
Error in line 25: uEP4 S244 107,6
